Avoid conflict here and lubridate on all pipelines
Change here with here::here in create_db.Rmd and assign_grid.Rmd as well.

--- a/src/belgium/assign_grid.Rmd
+++ b/src/belgium/assign_grid.Rmd
@@ -37,7 +37,7 @@ Name and path of `.sqlite` file:
 ```{r name_path}
 key <- "0044021-181108115102211"
 sqlite_file <- paste(key, "occurrence.sqlite", sep = "_")
-sqlite_path <- here("data", "interim", sqlite_file)
+sqlite_path <- here::here("data", "interim", sqlite_file)
 ```
 
 Table name:
